2022-10-07 Roy Hills <Roy.Hills@nta-monitor.com>

	* my_getopt.c, my_getopt.h: New getopt implementation using bsittler's version
	  from http://xent.com/~bsittler/geocities/.

	* configure.ac: Modified to use new getopt implementation.

2022-10-05 Roy Hills <Roy.Hills@nta-monitor.com>

	* arp-scan.c, arp-scan.1: Documented the exit status when --limit
	  is specified and fewer than the specified number of hosts respond.

2022-10-02 Roy Hills <Roy.Hills@nta-monitor.com>

	* acinclude.m4: fix typo in 'if test "X$CC" != "X"' checks.

2022-09-28 Roy Hills <Roy.Hills@nta-monitor.com>

	* arp-scan.c: Added --limit (-M) option. When this option is
	  given, arp-scan will exit after the specified number of target
	  hosts have responded. Thanks to mirfatif for suggesting this
	  enhancement.

	* arp-scan.c: Don't increment number of responders for duplicate
	  response packets. The number of responders now represents the
	  number of responding hosts rather than the number of response
	  packets.

	* pkt-dup-response.pcap: new file

	* check-decode: Added duplicate response packet checks

	* arp-scan.1: Updated manpage to reflect new --limit option.

2022-09-18 Roy Hills <Roy.Hills@nta-monitor.com>

	* check-decode, check-host-list, check-packet, check-run1: Changed
	  "$srcdir/arp-scan" to "./arp-scan" in test scripts so
	  "make distcheck" succeeds.

	* .github/workflows/c-cpp.yml: Enable "make distcheck" step.

2022-09-14 Roy Hills <Roy.Hills@nta-monitor.com>

	* README.md, .github/workflows/*: Migrated from travis-ci to github
	  actions for CI/CD build check and code coverage report.

	* .travis.yml: removed as no longer needed.

2022-09-11 Roy Hills <Roy.Hills@hotmail.com>

	* arp-scan.h, configure.ac, getopt.c, getopt1.c: only include
	  the local replacement getopt header file if the system doesn't
	  support getopt_long_only.  Previously it was being included even
	  if it wasn't required.

	* getopt.h: rename to my_getopt.h.
